--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "music-player",
-  "homepage": "https://srikargunnam.github.io/musicplayer/",
+  "homepage": "https://srikargunnam.github.io/musicplayer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
